--- a/src/index.css
+++ b/src/index.css
@@ -251,10 +251,12 @@ header{
 }
 .carousel .item{
     position: relative;
-    display: none;
+    display:none;
+    opacity:0;
 }
 .carousel .item.show{
     position: relative;
+    opacity: 1;
     font-size: 50px;
     display:flex;
     width:100%;
