--- a/src/index.css
+++ b/src/index.css
@@ -173,18 +173,20 @@ header{
     font-size: 50px;
 }
 .carousel .item{
-    position: relative;
+    position: absolute;
     display:none;
     opacity:0;
-}
-.carousel .item.show{
-    position: relative;
-    opacity: 1;
     display:flex;
     width:100%;
     height:100%;
     align-items: center;
     justify-content: center;
+}
+.carousel .item.show{
+    position: relative;
+    opacity: 1;
+    transition: all 0.3s ease-in-out;
+    
 }
 .carousel>.buttons{
     position: absolute;
