--- a/src/templates/header/header.html
+++ b/src/templates/header/header.html
@@ -12,7 +12,7 @@
                 </ul>
             </div>
         </li>
-        <li><a href="/">About Me</a></li>
+        <li><a href="/src/software/software.html">About Me</a></li>
     </ul>
 </div>
 <div class="btn-holder">
