--- a/src/slider/slider.css
+++ b/src/slider/slider.css
@@ -25,6 +25,8 @@
     transform: translateX(0) scale(75%);
     z-index: -1;
     opacity: 0;
+    width:200px;
+    overflow: hidden;
 }
 .slider .imgs .img#active,
 .slider .imgs .img#next,
@@ -37,11 +39,11 @@
     z-index:0;
 }
 .slider .imgs .img#next{
-    transform: translateX(50px) scale(75%);
+    transform: translateX(130px) scale(75%);
     z-index:-1;
 }
 .slider .imgs .img#prev{
-    transform: translateX(-50px) scale(75%);
+    transform: translateX(-130px) scale(75%);
     z-index:-1;
 }
 .slider .arrows{
