--- a/src/slider/slider.css
+++ b/src/slider/slider.css
@@ -21,7 +21,7 @@
     position: absolute;
     background: red;
     height:100%;
-    transition: transform 0.3s ease-in-out, display 0.3s 0s, opacity 0.3s ease-in-out, z-index 0.3s 0s;
+    transition: transform 0.3s ease-in-out, display 0.3s 0s, opacity 0.3s ease-in-out, z-index 0.3s 0s, filter 0.3s ease-in-out;
     transform: translateX(0) scale(75%);
     z-index: -3;
     opacity: 0;
@@ -41,10 +41,12 @@
 .slider .imgs .img#next{
     transform: translateX(130px) scale(75%);
     z-index:-1;
+    filter: blur(4px);
 }
 .slider .imgs .img#prev{
     transform: translateX(-130px) scale(75%);
     z-index:-2;
+    filter: blur(4px);
 }
 .slider .arrows{
     display: flex;
