--- a/src/slider/slider.css
+++ b/src/slider/slider.css
@@ -15,9 +15,11 @@
     display: flex;
     width:100%;
     justify-content: center;
-    height:200px;
+    height:40vh;
 }
 .slider .img{
+    border-radius: 10px;
+    display: flex;
     position: absolute;
     background: red;
     height:100%;
@@ -25,7 +27,7 @@
     transform: translateX(0) scale(75%);
     z-index: -3;
     opacity: 0;
-    width:200px;
+    width:40vh;
     overflow: hidden;
 }
 .slider .imgs .img#active,
@@ -39,12 +41,12 @@
     z-index:0;
 }
 .slider .imgs .img#next{
-    transform: translateX(130px) scale(75%);
+    transform: translateX(20vh) scale(75%);
     z-index:-1;
     filter: blur(4px);
 }
 .slider .imgs .img#prev{
-    transform: translateX(-130px) scale(75%);
+    transform: translateX(-20vh) scale(75%);
     z-index:-2;
     filter: blur(4px);
 }
@@ -60,21 +62,34 @@
 }
 .slider .arrows .left-arrow-container{
     display: flex;
-    width:100%;
-    margin-left: 10px;
+    position: absolute;
+    top:0;
+    left:0;
     align-items: center;
+    width:100%;
     height:100%;
 }
 .slider .arrows .right-arrow-container{
     display: flex;
-    margin-left: auto;
-    height:100%;
-    margin-right:10px;
+    position: absolute;
+    top:0;
+    left:0;
     align-items: center;
+    width:100%;
+    height:100%;
+}
+.slider .arrows #left-arrow{
+    margin-left:26.5%;
+}
+.slider .arrows #right-arrow{
+    margin-left: 70%;
 }
 .slider .arrows #left-arrow,
 .slider .arrows #right-arrow{
+    position: relative;
+    display: flex;
     opacity: 0.4;
+    z-index:1;
 }
 .slider .arrows #left-arrow:hover,
 .slider .arrows #right-arrow:hover{
